# file-management-system

./: Cargo.toml  askama.toml  sqlite.db
.cargo/: config.toml
.github/: copilot-instructions.md
docs/: entity-relationship-diagram.md  process-flow.md  product-requirement-document.md
migrations/: 20260316080251_init.down.sql  20260316080251_init.up.sql  20260317061532_session.down.sql  20260317061532_session.up.sql
src/: main.rs
src/features/: mod.rs
src/features/auth/: extractor.rs  handler.rs  mod.rs  model.rs  request.rs
src/features/auth/pages/: sign-in.html.askama  sign-up.html.askama
src/features/auth/templates/: auth-layout.html.askama
src/features/files/: handler.rs  model.rs
src/features/files/pages/: index.html.askama
src/features/upload/: handler.rs
src/features/upload/partial/: upload-dialog.html.askama
src/shared/: context.rs
src/shared/templates/: base.html.askama  dashboard.html.askama
