[package]
name = "file-management-system"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
askama = "0.15.4"
axum = { version = "0.8.8", features = ["macros"] }
chrono = "0.4.44"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = "1.22.0"
